--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,13 +1,28 @@
-.content{
+.banner {
     text-align: center;
     height: 75vh;
-    background-color: blue;
-    background-image: url('./');
-    .heading-1 {
-        font-size: 1.5rem;
-        font-weight: 700;
+    position: relative;
+    .image {
+        background-color: var(--bg-color);
+        background-image: url('./../assets/app/catalog.jpg');
+        background-repeat: repeat;
+        background-size: contain;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+
     }
-    .heading-2 {
-        font-weight: 700;
+    .content{
+        position: relative;
+        z-index: 1;
+        .heading-1 {
+            font-size: 1.5rem;
+            font-weight: 700;
+        }
+        .heading-2 {
+            font-weight: 700;
+        }
     }
 }
