--- a/styles/banner.css
+++ b/styles/banner.css
@@ -2,6 +2,9 @@
     text-align: center;
     height: 75vh;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     .image {
         background-color: var(--bg-color);
         background-image: url('./../assets/app/catalog.jpg');
@@ -12,17 +15,12 @@
         bottom: 0;
         left: 0;
         right: 0;
+        opacity: 0.3;
 
     }
     .content{
         position: relative;
         z-index: 1;
-        .heading-1 {
-            font-size: 1.5rem;
-            font-weight: 700;
-        }
-        .heading-2 {
-            font-weight: 700;
-        }
+        
     }
 }
