--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,10 @@
     top: 0;
     background-color: black;
     z-index: 99;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem ;
+    align-items: center;
     img {
         width: 20%;
         max-width: 250px;
@@ -15,4 +19,6 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    gap: 10px;
 }
