--- a/styles/common.css
+++ b/styles/common.css
@@ -29,16 +29,29 @@ p {
     text-decoration: none;
 }
 
-@media print {
-    body header.header {
-        display: none;
-    
+@media screen and (width > 768px) {
+    a.hide {
+        display: block;
     }
+}
+
+@media print {
+    /* body header.header {
+    display: none;
+    
+}
     body footer.footer {
         display: none;
     }
     body section.banner {
         display:none ;
+    }
+    */
+
+    body {
+        header.header, footer.footer, section.banner {
+            display: none;
+        }
     }
 }
 
