--- a/styles/info.css
+++ b/styles/info.css
@@ -1,5 +1,5 @@
 .main {
-    width: 90;
+    width: 90%;
     margin: 0 auto;
     max-width:  768px;
 }
@@ -18,5 +18,16 @@
             width: 10em;
             top: 30px;
         }
+    }
+}
+
+@media screen and (width > 768px) {
+    .info {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: center;
+        max-width: 500px;
+        margin: 0 auto;
     }
 }
