--- a/styles/componentes.css
+++ b/styles/componentes.css
@@ -9,6 +9,11 @@
     border:  1px solid var(--main-brand-color);
     transition-property: background-color;
     transition-duration: 10s;
+    border: 1px solid var(--main-brand-color);
+    &.secondary {
+        background-color: transparent;
+        border: 1px solid var(--main-text-color);
+    }
 }
 
 .heading-1 {
@@ -18,4 +23,42 @@
 
 .heading-2 {
     font-weight: 700;
+}
+
+.form-element {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+    label {
+        margin-bottom: 0.5rem;
+    }
+    input, textarea, select {
+        border: none;
+        padding: 1rem;
+        border-radius: 5px;
+        background-color: var(--input-bg-color);
+        color: var(--main-text-color);
+    }
+    &.row {
+        flex-direction: row;
+        gap: 10px;
+        label {
+            margin: 0;
+        }
+    }
+}
+
+
+.file-element{
+    margin-bottom: 1rem;
+    label {
+        display: block;
+        background-color: var(--input-bg-color);
+        color: var(--main-text-color);
+        padding: 1rem;
+        border-radius: 5px;
+    }
+    input[type="file"] {
+        display: none;
+    }
 }
