--- a/styles/shows.css
+++ b/styles/shows.css
@@ -1,7 +1,15 @@
 figure {
     margin: 0;
 }
+.all-shows{
+    margin-bottom: 4vh;
+}
 
+@media screen and (width > 768px){
+    .all-shows{
+        margin-bottom: 10vh;
+    }
+}
 .list{
     list-style: none;
     margin: 0;
